--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">رصد</string>
     <string name="test">بررسی</string>
+    <string name="clear">پاکسازی</string>
 </resources>
