--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">Rasad</string>
     <string name="test">Test</string>
+    <string name="clear">Clear</string>
 </resources>
